--- a/package.json
+++ b/package.json
@@ -1,3 +1,16 @@
 {
-	
+  "name": "microBox",
+  "description": "The very tiny lightbox",
+  "version": "2.0.0",
+  "author": "Boris Cherny <b@performancejs.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AgileDiagnosis/rtfd-components"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "0.1.7",
+    "grunt-shell": "0.2.1",
+    "grunt-contrib-uglify": "~0.2.0"
+  }
 }
