--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "microBox",
   "description": "The very tiny lightbox",
   "version": "2.0.0",
-  "author": "Boris Cherny <b@performancejs.com>",
+  "author": "Boris Cherny <boris@agilediagnosis.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/AgileDiagnosis/rtfd-components"
