--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "microBox",
+  "name": "microbox",
   "description": "The very tiny lightbox",
-  "version": "2.0.0",
-  "author": "Boris Cherny <boris@agilediagnosis.com>",
+  "version": "3.0.0",
+  "author": "Boris Cherny <boris@performancejs.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AgileDiagnosis/rtfd-components"
+    "url": "https://github.com/eighttrackmind/microbox"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-cli": "0.1.7",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0"
+  },
+  "dependencies": {
+    "umodel": "0.0.5",
+    "izzy": "~0.1.4"
   }
 }
