--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "umodel": "0.0.5",
-    "izzy": "~0.1.4"
+    "izzy": "~0.1.4",
+    "_": "git://github.com/eighttrackmind/_.git"
   }
 }
