--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "microbox",
   "description": "The very tiny lightbox",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "author": "Boris Cherny <boris@performancejs.com>",
   "contributors": [
     {
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "umodel": "0.0.x",
-    "_": "git://github.com/eighttrackmind/_.git"
+    "u": "git://github.com/eighttrackmind/u.git"
   },
   "keywords": [
     "lightbox",
